--- a/ReactiveExtensions/app/build.gradle
+++ b/ReactiveExtensions/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion 25
@@ -27,6 +28,11 @@ android {
     packagingOptions {
         pickFirst 'META-INF/rxjava.properties'
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -43,4 +49,5 @@ dependencies {
     compile project(path: ':common')
     compile project(path: ':movies')
     compile project(path: ':posts')
+    compile project(path: ':tools')
 }
