first attempt to use rxbindings to trigger actions from a fragment

--- a/ReactiveExtensions/tools/build.gradle
+++ b/ReactiveExtensions/tools/build.gradle
@@ -40,4 +40,6 @@ dependencies {
 
     // module dependencies
     compile project(':common')
+    compile project(':movies')          // FIXME: REMOVE THIS!!!
+    compile project(':posts')           // FIXME: REMOVE THIS!!!
 }
