--- a/ReactiveExtensions/app/build.gradle
+++ b/ReactiveExtensions/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 25
@@ -43,11 +44,14 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
+    testCompile "junit:junit:$JUNIT_VERSION"
 
     // module dependencies
     compile project(path: ':common')
     compile project(path: ':movies')
     compile project(path: ':posts')
     compile project(path: ':tools')
+
+    apt "com.google.dagger:dagger-compiler:$DAGGER2_VERSION"
+    testApt "com.google.dagger:dagger-compiler:$DAGGER2_VERSION"
 }
