--- a/ReactiveExtensions/common/build.gradle
+++ b/ReactiveExtensions/common/build.gradle
@@ -36,32 +36,38 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
-    testCompile 'com.squareup.okhttp3:mockwebserver:3.4.2'
+    testCompile "junit:junit:$JUNIT_VERSION"
 
     // android
-    compile 'com.android.support:appcompat-v7:25.1.0'
+    compile "com.android.support:appcompat-v7:$SUPPORT_LIBRARY_VERSION"
 
     // google
-    compile 'com.google.code.gson:gson:2.6.2'
+    compile "com.google.code.gson:gson:$GSON_VERSION"
 
     // timber
-    compile 'com.jakewharton.timber:timber:4.3.1'
+    compile "com.jakewharton.timber:timber:$TIMBER_VERSION"
 
     // rxjava
-    compile 'io.reactivex.rxjava2:rxjava:2.0.1'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'com.jakewharton.rxbinding:rxbinding:1.0.0'
-    compile 'com.jakewharton.rxbinding:rxbinding-support-v4:1.0.0'
-    compile 'com.jakewharton.rxbinding:rxbinding-appcompat-v7:1.0.0'
-    compile 'com.jakewharton.rxbinding:rxbinding-design:1.0.0'
-    compile 'com.jakewharton.rxbinding:rxbinding-recyclerview-v7:1.0.0'
-    compile 'com.jakewharton.rxbinding:rxbinding-leanback-v17:1.0.0'
+    compile "io.reactivex.rxjava2:rxjava:$RXJAVA_VERSION"
+    compile "io.reactivex.rxjava2:rxandroid:$RXJAVA_VERSION"
+    compile "com.jakewharton.rxbinding:rxbinding:$RXBINDING_VERSION"
+    compile "com.jakewharton.rxbinding:rxbinding-support-v4:$RXBINDING_VERSION"
+    compile "com.jakewharton.rxbinding:rxbinding-appcompat-v7:$RXBINDING_VERSION"
+    compile "com.jakewharton.rxbinding:rxbinding-design:$RXBINDING_VERSION"
+    compile "com.jakewharton.rxbinding:rxbinding-recyclerview-v7:$RXBINDING_VERSION"
+    compile "com.jakewharton.rxbinding:rxbinding-leanback-v17:$RXBINDING_VERSION"
 
     // retrofit
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-    compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    compile "com.squareup.retrofit2:retrofit:$RETROFIT_VERSION"
+    compile "com.squareup.retrofit2:converter-gson:$RETROFIT_VERSION"
+    compile "com.squareup.retrofit2:adapter-rxjava:$RETROFIT_VERSION"
+//    compile "com.jakewharton.retrofit:retrofit2-rxjava2-adapter:$RETROFIT_ADAPTER_FOR_RXJAVA2_VERSION"
 
+    // dagger (and related stuff)
+    provided "javax.annotation:jsr250-api:$JAVAX_ANNOTATION_VERSION"
+    compile "com.google.dagger:dagger:$DAGGER2_VERSION"
+    compile "javax.inject:javax.inject:$JAVAX_INJECT_VERSION"
+
+    // okhttp
+    testCompile "com.squareup.okhttp3:mockwebserver:$OKHTTP_VERSION"
 }
