--- a/ReactiveExtensions/gradle.properties
+++ b/ReactiveExtensions/gradle.properties
@@ -14,4 +14,18 @@ org.gradle.jvmargs=-Xmx1536m
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
+org.gradle.parallel=true
+
+JUNIT_VERSION=4.12
+OKHTTP_VERSION=3.4.2
+#SUPPORT_LIBRARY_VERSION=25.1.0
+SUPPORT_LIBRARY_VERSION=25.0.1
+GSON_VERSION=2.7
+TIMBER_VERSION=4.3.1
+RXJAVA_VERSION=2.0.1
+RXBINDING_VERSION=1.0.0
+RETROFIT_VERSION=2.1.0
+RETROFIT_ADAPTER_FOR_RXJAVA2_VERSION=1.0.0
+DAGGER2_VERSION=2.8
+JAVAX_ANNOTATION_VERSION=1.0
+JAVAX_INJECT_VERSION=1
