--- a/ReactiveExtensions/app/src/main/AndroidManifest.xml
+++ b/ReactiveExtensions/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
             </intent-filter>
         </activity>
 
+        <activity android:name="com.barbasdev.movies.MoviesActivity" />
+
     </application>
 
 </manifest>
