--- a/ReactiveExtensions/app/src/main/AndroidManifest.xml
+++ b/ReactiveExtensions/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         </activity>
 
         <activity android:name="com.barbasdev.movies.MoviesActivity" />
+        <activity android:name="com.barbasdev.tools.rxbinding.ProofOfConceptActivity" />
 
     </application>
 
