--- a/ReactiveExtensions/gradle.properties
+++ b/ReactiveExtensions/gradle.properties
@@ -22,7 +22,7 @@ SUPPORT_LIBRARY_VERSION=25.0.1
 GSON_VERSION=2.7
 TIMBER_VERSION=4.3.1
 RXJAVA_VERSION=2.0.1
-RXBINDING_VERSION=1.0.0
+RXBINDING_VERSION=2.0.0-SNAPSHOT
 RETROFIT_VERSION=2.1.0
 RETROFIT_ADAPTER_FOR_RXJAVA2_VERSION=1.0.0
 DAGGER2_VERSION=2.8
