--- a/ReactiveExtensions/app/build.gradle
+++ b/ReactiveExtensions/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
-apply plugin: 'com.neenbedankt.android-apt'
+//apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 25
@@ -51,7 +51,4 @@ dependencies {
     compile project(path: ':movies')
     compile project(path: ':posts')
     compile project(path: ':tools')
-
-    apt "com.google.dagger:dagger-compiler:$DAGGER2_VERSION"
-    testApt "com.google.dagger:dagger-compiler:$DAGGER2_VERSION"
 }
