--- a/ReactiveExtensions/gradle.properties
+++ b/ReactiveExtensions/gradle.properties
@@ -28,3 +28,4 @@ RETROFIT_ADAPTER_FOR_RXJAVA2_VERSION=1.0.0
 DAGGER2_VERSION=2.8
 JAVAX_ANNOTATION_VERSION=1.0
 JAVAX_INJECT_VERSION=1
+ESPRESSO_VERSION=2.2.2
