--- a/ReactiveExtensions/posts/build.gradle
+++ b/ReactiveExtensions/posts/build.gradle
@@ -32,11 +32,10 @@ android {
 
 dependencies {
 //    compile fileTree(dir: 'libs', include: ['*.jar'])
-//    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-//        exclude group: 'com.android.support', module: 'support-annotations'
-//    })
-//    compile 'com.android.support:appcompat-v7:25.1.0'
-//    testCompile 'junit:junit:4.12'
+    androidTestCompile("com.android.support.test.espresso:espresso-core:$ESPRESSO_VERSION", {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    testCompile "junit:junit:$JUNIT_VERSION"
 
     // module dependencies
     compile project(':common')
