--- a/ReactiveExtensions/app/build.gradle
+++ b/ReactiveExtensions/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
-//apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 25
@@ -37,6 +37,12 @@ android {
 }
 
 dependencies {
+    // module dependencies
+    compile project(path: ':common')
+    compile project(path: ':movies')
+    compile project(path: ':posts')
+    compile project(path: ':tools')
+
     // libs
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
@@ -46,9 +52,9 @@ dependencies {
     })
     testCompile "junit:junit:$JUNIT_VERSION"
 
-    // module dependencies
-    compile project(path: ':common')
-    compile project(path: ':movies')
-    compile project(path: ':posts')
-    compile project(path: ':tools')
+    // dagger stuff
+    testApt "com.google.dagger:dagger-compiler:$DAGGER2_VERSION"
+    apt "com.google.dagger:dagger-compiler:$DAGGER2_VERSION"
+    compile "com.google.dagger:dagger:$DAGGER2_VERSION"
+    provided "javax.annotation:jsr250-api:$JAVAX_ANNOTATION_VERSION"
 }
