--- a/ReactiveExtensions/common/build.gradle
+++ b/ReactiveExtensions/common/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'realm-android'
 apply plugin: 'me.tatarka.retrolambda'
-apply plugin: 'com.neenbedankt.android-apt'
+//apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 25
@@ -75,10 +75,15 @@ dependencies {
 //    compile "javax.inject:javax.inject:$JAVAX_INJECT_VERSION"
 //    provided "javax.annotation:jsr250-api:$JAVAX_ANNOTATION_VERSION"
 
-    testApt "com.google.dagger:dagger-compiler:$DAGGER2_VERSION"
-    apt "com.google.dagger:dagger-compiler:$DAGGER2_VERSION"
-    compile "com.google.dagger:dagger:$DAGGER2_VERSION"
-    provided "javax.annotation:jsr250-api:$JAVAX_ANNOTATION_VERSION"
+
+
+
+
+
+//    testApt "com.google.dagger:dagger-compiler:$DAGGER2_VERSION"
+//    apt "com.google.dagger:dagger-compiler:$DAGGER2_VERSION"
+//    compile "com.google.dagger:dagger:$DAGGER2_VERSION"
+//    provided "javax.annotation:jsr250-api:$JAVAX_ANNOTATION_VERSION"
 
 
 
