--- a/ReactiveExtensions/common/build.gradle
+++ b/ReactiveExtensions/common/build.gradle
@@ -62,7 +62,7 @@ dependencies {
     // retrofit
     compile "com.squareup.retrofit2:retrofit:$RETROFIT_VERSION"
     compile "com.squareup.retrofit2:converter-gson:$RETROFIT_VERSION"
-    compile "com.jakewharton.retrofit:retrofit2-rxjava2-adapter:$RETROFIT_ADAPTER_FOR_RXJAVA2_VERSION"
+    compile "com.squareup.retrofit2:adapter-rxjava2:$RETROFIT_VERSION"
 
     // dagger (and related stuff)
 //    provided "javax.annotation:jsr250-api:$JAVAX_ANNOTATION_VERSION"
