--- a/ReactiveExtensions/gradle.properties
+++ b/ReactiveExtensions/gradle.properties
@@ -18,12 +18,12 @@ org.gradle.parallel=true
 
 JUNIT_VERSION=4.12
 OKHTTP_VERSION=3.4.2
-SUPPORT_LIBRARY_VERSION=25.0.1
+SUPPORT_LIBRARY_VERSION=25.3.0
 GSON_VERSION=2.7
 TIMBER_VERSION=4.3.1
 RXJAVA_VERSION=2.0.1
-RXBINDING_VERSION=2.0.0-SNAPSHOT
-RETROFIT_VERSION=2.1.0
+RXBINDING_VERSION=2.0.0
+RETROFIT_VERSION=2.2.0
 RETROFIT_ADAPTER_FOR_RXJAVA2_VERSION=1.0.0
 DAGGER2_VERSION=2.8
 JAVAX_ANNOTATION_VERSION=1.0
