--- a/ReactiveExtensions/common/build.gradle
+++ b/ReactiveExtensions/common/build.gradle
@@ -1,7 +1,5 @@
 apply plugin: 'com.android.library'
-apply plugin: 'realm-android'
 apply plugin: 'me.tatarka.retrolambda'
-//apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 25
@@ -20,10 +18,6 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
-    }
-
-    dataBinding {
-        enabled = true
     }
 
     compileOptions {
@@ -49,44 +43,15 @@ dependencies {
     // timber
     compile "com.jakewharton.timber:timber:$TIMBER_VERSION"
 
-    // rxjava
+    // rxjava, rxandroid & rxbinding
     compile "io.reactivex.rxjava2:rxjava:$RXJAVA_VERSION"
-    compile "io.reactivex.rxjava2:rxandroid:$RXJAVA_VERSION"
+    compile "io.reactivex.rxjava2:rxandroid:$RXANDROID_VERSION"
     compile "com.jakewharton.rxbinding2:rxbinding:$RXBINDING_VERSION"
-//    compile "com.jakewharton.rxbinding:rxbinding-support-v4:$RXBINDING_VERSION"
-//    compile "com.jakewharton.rxbinding:rxbinding-appcompat-v7:$RXBINDING_VERSION"
-//    compile "com.jakewharton.rxbinding:rxbinding-design:$RXBINDING_VERSION"
-//    compile "com.jakewharton.rxbinding:rxbinding-recyclerview-v7:$RXBINDING_VERSION"
-//    compile "com.jakewharton.rxbinding:rxbinding-leanback-v17:$RXBINDING_VERSION"
 
     // retrofit
     compile "com.squareup.retrofit2:retrofit:$RETROFIT_VERSION"
     compile "com.squareup.retrofit2:converter-gson:$RETROFIT_VERSION"
     compile "com.squareup.retrofit2:adapter-rxjava2:$RETROFIT_VERSION"
-
-    // dagger (and related stuff)
-//    provided "javax.annotation:jsr250-api:$JAVAX_ANNOTATION_VERSION"
-//    compile "com.google.dagger:dagger:$DAGGER2_VERSION"
-//    compile "javax.inject:javax.inject:$JAVAX_INJECT_VERSION"
-
-//    testApt "com.google.dagger:dagger-compiler:$DAGGER2_VERSION"
-//    apt "com.google.dagger:dagger-compiler:$DAGGER2_VERSION"
-//    compile "com.google.dagger:dagger:$DAGGER2_VERSION"
-//    compile "javax.inject:javax.inject:$JAVAX_INJECT_VERSION"
-//    provided "javax.annotation:jsr250-api:$JAVAX_ANNOTATION_VERSION"
-
-
-
-
-
-
-//    testApt "com.google.dagger:dagger-compiler:$DAGGER2_VERSION"
-//    apt "com.google.dagger:dagger-compiler:$DAGGER2_VERSION"
-//    compile "com.google.dagger:dagger:$DAGGER2_VERSION"
-//    provided "javax.annotation:jsr250-api:$JAVAX_ANNOTATION_VERSION"
-
-
-
 
     // okhttp
     testCompile "com.squareup.okhttp3:mockwebserver:$OKHTTP_VERSION"
